k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: race-command-center
  namespace: kdd-race
spec:
  selector:
    app: race-command-center
  ports:
    - name: http
      port: 8150
      targetPort: 8150
  type: ClusterIP
